Resize sections correctly on smaller windows

--- a/frontend/src/components/codeBox/CodeBox.css
+++ b/frontend/src/components/codeBox/CodeBox.css
@@ -1,6 +1,7 @@
 #codeBox{
 	text-align: left;
-	width: max-content;
+	min-width: max-content;
+	flex-grow: 1;
 }
 
 .code {
