--- a/frontend/src/components/display/Display.css
+++ b/frontend/src/components/display/Display.css
@@ -5,4 +5,5 @@
     overflow-y: auto;
     overflow: auto;
     position: relative;
+    min-width: 300px;
 }
