--- a/frontend/src/components/explanationBox/ExplanationBox.css
+++ b/frontend/src/components/explanationBox/ExplanationBox.css
@@ -1,7 +1,7 @@
 #explanationBox{
 	text-align: left;
-	min-width: min-content;
-	flex-grow: 1;
+	min-width: 300px;
+	flex-grow: 9999;
 	flex-basis: 20%;
 }
 
