--- a/frontend/src/components/headerBar/HeaderBar.css
+++ b/frontend/src/components/headerBar/HeaderBar.css
@@ -1,5 +1,6 @@
 #headerBar{
 	width: 100%;
+	min-width: 650px;
 	height: 50px;
 	background-color: #00675b;
 	font-size: 24px;
