--- a/frontend/src/pages/styles.css
+++ b/frontend/src/pages/styles.css
@@ -1,6 +1,6 @@
 #AlgorithmContainer{
 	display: grid;
-	grid-template-columns: auto minmax(500px, 90%) auto;
+	grid-template-columns: auto minmax(650px, 90%) auto;
 	grid-template-rows: min-content min-content;
 	width: 100%;
 }
@@ -47,6 +47,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	width: 100%;
+	justify-content: flex-start;
 	flex-direction: row;
 	grid-column-start: 2;
 	grid-column-end: 3;
